Fix username overflow

--- a/src/css/_user.scss
+++ b/src/css/_user.scss
@@ -2,6 +2,11 @@
     color: #999;
 }
 
+.userDetails {
+    word-wrap: break-word;
+    overflow: hidden;
+}
+
 .userIcon {
 	float: left;
 	margin-right: 6px;
